--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongod": "^2.0.0",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.3"
   },
